feat: 파일 항목이 한개일 경우 처리